--- a/sites/default/files/simpletest/verbose/DNAHelixFormValidationTest-2.html
+++ b/sites/default/files/simpletest/verbose/DNAHelixFormValidationTest-2.html
@@ -17,40 +17,40 @@
 <link rel="shortcut icon" href="http://localhost:8888/misc/favicon.ico" type="image/vnd.microsoft.icon" />
   <title>Let&#039;s Play Polymerase! | Drupal</title>
   <style type="text/css" media="all">
-@import url("http://localhost:8888/modules/system/system.base.css?oiaykl");
-@import url("http://localhost:8888/modules/system/system.menus.css?oiaykl");
-@import url("http://localhost:8888/modules/system/system.messages.css?oiaykl");
-@import url("http://localhost:8888/modules/system/system.theme.css?oiaykl");
+@import url("http://localhost:8888/modules/system/system.base.css?oii214");
+@import url("http://localhost:8888/modules/system/system.menus.css?oii214");
+@import url("http://localhost:8888/modules/system/system.messages.css?oii214");
+@import url("http://localhost:8888/modules/system/system.theme.css?oii214");
 </style>
 <style type="text/css" media="all">
-@import url("http://localhost:8888/modules/comment/comment.css?oiaykl");
-@import url("http://localhost:8888/modules/field/theme/field.css?oiaykl");
-@import url("http://localhost:8888/modules/node/node.css?oiaykl");
-@import url("http://localhost:8888/modules/search/search.css?oiaykl");
-@import url("http://localhost:8888/modules/user/user.css?oiaykl");
+@import url("http://localhost:8888/modules/comment/comment.css?oii214");
+@import url("http://localhost:8888/modules/field/theme/field.css?oii214");
+@import url("http://localhost:8888/modules/node/node.css?oii214");
+@import url("http://localhost:8888/modules/search/search.css?oii214");
+@import url("http://localhost:8888/modules/user/user.css?oii214");
 </style>
 <style type="text/css" media="all">
-@import url("http://localhost:8888/themes/bartik/css/layout.css?oiaykl");
-@import url("http://localhost:8888/themes/bartik/css/style.css?oiaykl");
-@import url("http://localhost:8888/themes/bartik/css/colors.css?oiaykl");
+@import url("http://localhost:8888/themes/bartik/css/layout.css?oii214");
+@import url("http://localhost:8888/themes/bartik/css/style.css?oii214");
+@import url("http://localhost:8888/themes/bartik/css/colors.css?oii214");
 </style>
 <style type="text/css" media="print">
-@import url("http://localhost:8888/themes/bartik/css/print.css?oiaykl");
+@import url("http://localhost:8888/themes/bartik/css/print.css?oii214");
 </style>
 
 <!--[if lte IE 7]>
-<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie.css?oiaykl" media="all" />
+<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie.css?oii214" media="all" />
 <![endif]-->
 
 <!--[if IE 6]>
-<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie6.css?oiaykl" media="all" />
+<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie6.css?oii214" media="all" />
 <![endif]-->
   <script type="text/javascript" src="http://localhost:8888/misc/jquery.js?v=1.4.4"></script>
 <script type="text/javascript" src="http://localhost:8888/misc/jquery.once.js?v=1.2"></script>
-<script type="text/javascript" src="http://localhost:8888/misc/drupal.js?oiaykl"></script>
+<script type="text/javascript" src="http://localhost:8888/misc/drupal.js?oii214"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"bartik","theme_token":"GvjyIp_PRfeb4oTsiong3Fon4w9JGajbh2MfF9FtvkM","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"themes\/bartik\/css\/layout.css":1,"themes\/bartik\/css\/style.css":1,"themes\/bartik\/css\/colors.css":1,"themes\/bartik\/css\/print.css":1,"themes\/bartik\/css\/ie.css":1,"themes\/bartik\/css\/ie6.css":1}},"urlIsAjaxTrusted":{"\/dna_helix?destination=dna_helix":true,"\/dna_helix":true}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"bartik","theme_token":"BbkMOMOzRDghkdvOZbnZIbMY7FPxF4C2uIBynYBsqgg","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"themes\/bartik\/css\/layout.css":1,"themes\/bartik\/css\/style.css":1,"themes\/bartik\/css\/colors.css":1,"themes\/bartik\/css\/print.css":1,"themes\/bartik\/css\/ie.css":1,"themes\/bartik\/css\/ie6.css":1}},"urlIsAjaxTrusted":{"\/dna_helix?destination=dna_helix":true,"\/dna_helix":true}});
 //--><!]]>
 </script>
 </head>
@@ -116,7 +116,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 </div>
 <div class="item-list"><ul><li class="first"><a href="/user/register" title="Create a new user account.">Create new account</a></li>
 <li class="last"><a href="/user/password" title="Request new password via e-mail.">Request new password</a></li>
-</ul></div><input type="hidden" name="form_build_id" value="form-D8YO9P2eQRn3l8wPI5zsgSa_5O44HFyDa6Fk3m3kFX8" />
+</ul></div><input type="hidden" name="form_build_id" value="form-sxbZ93MTDiiu-DMXoixAM6OzZV0-udc8limAV_UUP2U" />
 <input type="hidden" name="form_id" value="user_login_block" />
 <div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit--2" name="op" value="Log in" class="form-submit" /></div></div></form>  </div>
 </div>
@@ -139,7 +139,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
  <input type="text" id="edit-user-strand" name="user_strand" value="" size="60" maxlength="128" class="form-text" />
 <div class="description">Enter a strand of DNA and we'll give you a corisponding strand</div>
 </div>
-<input type="submit" id="edit-submit" name="op" value="submit" class="form-submit" /><input type="hidden" name="form_build_id" value="form-CUrTqU7jH-Wjzetll42ZHYPeqeHQMC5CekY9Rr22JOU" />
+<input type="submit" id="edit-submit" name="op" value="submit" class="form-submit" /><input type="hidden" name="form_build_id" value="form-qdzXYalMKzdeB-eQREXJywpFu0_d6jFde87kilc_FEU" />
 <input type="hidden" name="form_id" value="dna_helix_form" />
 </div></form>  </div>
 </div>
