--- a/sites/default/files/simpletest/verbose/DNAHelixFormValidationTest-3.html
+++ b/sites/default/files/simpletest/verbose/DNAHelixFormValidationTest-3.html
@@ -1,5 +1,5 @@
 <hr />ID #3 (<a href="DNAHelixFormValidationTest-2.html">Previous</a> | <a href="DNAHelixFormValidationTest-4.html">Next</a>)<hr />POST request to: dna_helix<hr />Ending URL: http://localhost:8888/dna_helix<hr />Fields: <code><span style="color: #000000">
-<span style="color: #0000BB">&lt;?php&nbsp;</span><span style="color: #007700">array&nbsp;(<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'user_strand'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'mama&nbsp;mia'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'op'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'submit'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'form_build_id'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'form-CUrTqU7jH-Wjzetll42ZHYPeqeHQMC5CekY9Rr22JOU'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'form_id'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'dna_helix_form'</span><span style="color: #007700">,<br />)</span>
+<span style="color: #0000BB">&lt;?php&nbsp;</span><span style="color: #007700">array&nbsp;(<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'user_strand'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'mama&nbsp;mia'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'op'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'submit'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'form_build_id'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'form-qdzXYalMKzdeB-eQREXJywpFu0_d6jFde87kilc_FEU'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'form_id'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'dna_helix_form'</span><span style="color: #007700">,<br />)</span>
 </span>
 </code><hr /><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
   "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
@@ -20,40 +20,40 @@
 <link rel="shortcut icon" href="http://localhost:8888/misc/favicon.ico" type="image/vnd.microsoft.icon" />
   <title>Let&#039;s Play Polymerase! | Drupal</title>
   <style type="text/css" media="all">
-@import url("http://localhost:8888/modules/system/system.base.css?oiaykl");
-@import url("http://localhost:8888/modules/system/system.menus.css?oiaykl");
-@import url("http://localhost:8888/modules/system/system.messages.css?oiaykl");
-@import url("http://localhost:8888/modules/system/system.theme.css?oiaykl");
+@import url("http://localhost:8888/modules/system/system.base.css?oii214");
+@import url("http://localhost:8888/modules/system/system.menus.css?oii214");
+@import url("http://localhost:8888/modules/system/system.messages.css?oii214");
+@import url("http://localhost:8888/modules/system/system.theme.css?oii214");
 </style>
 <style type="text/css" media="all">
-@import url("http://localhost:8888/modules/comment/comment.css?oiaykl");
-@import url("http://localhost:8888/modules/field/theme/field.css?oiaykl");
-@import url("http://localhost:8888/modules/node/node.css?oiaykl");
-@import url("http://localhost:8888/modules/search/search.css?oiaykl");
-@import url("http://localhost:8888/modules/user/user.css?oiaykl");
+@import url("http://localhost:8888/modules/comment/comment.css?oii214");
+@import url("http://localhost:8888/modules/field/theme/field.css?oii214");
+@import url("http://localhost:8888/modules/node/node.css?oii214");
+@import url("http://localhost:8888/modules/search/search.css?oii214");
+@import url("http://localhost:8888/modules/user/user.css?oii214");
 </style>
 <style type="text/css" media="all">
-@import url("http://localhost:8888/themes/bartik/css/layout.css?oiaykl");
-@import url("http://localhost:8888/themes/bartik/css/style.css?oiaykl");
-@import url("http://localhost:8888/themes/bartik/css/colors.css?oiaykl");
+@import url("http://localhost:8888/themes/bartik/css/layout.css?oii214");
+@import url("http://localhost:8888/themes/bartik/css/style.css?oii214");
+@import url("http://localhost:8888/themes/bartik/css/colors.css?oii214");
 </style>
 <style type="text/css" media="print">
-@import url("http://localhost:8888/themes/bartik/css/print.css?oiaykl");
+@import url("http://localhost:8888/themes/bartik/css/print.css?oii214");
 </style>
 
 <!--[if lte IE 7]>
-<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie.css?oiaykl" media="all" />
+<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie.css?oii214" media="all" />
 <![endif]-->
 
 <!--[if IE 6]>
-<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie6.css?oiaykl" media="all" />
+<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie6.css?oii214" media="all" />
 <![endif]-->
   <script type="text/javascript" src="http://localhost:8888/misc/jquery.js?v=1.4.4"></script>
 <script type="text/javascript" src="http://localhost:8888/misc/jquery.once.js?v=1.2"></script>
-<script type="text/javascript" src="http://localhost:8888/misc/drupal.js?oiaykl"></script>
+<script type="text/javascript" src="http://localhost:8888/misc/drupal.js?oii214"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"bartik","theme_token":"Fwte9rTK45NZ0aQNqtB2SLC9_YGF5uNVFJXeysq4N7o","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"themes\/bartik\/css\/layout.css":1,"themes\/bartik\/css\/style.css":1,"themes\/bartik\/css\/colors.css":1,"themes\/bartik\/css\/print.css":1,"themes\/bartik\/css\/ie.css":1,"themes\/bartik\/css\/ie6.css":1}},"urlIsAjaxTrusted":{"\/dna_helix?destination=dna_helix":true,"\/dna_helix":true}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"bartik","theme_token":"PAe3Y3tBeS8ibN1vH2qmzLGKCcbm-d0pCosRl2u5n1M","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"themes\/bartik\/css\/layout.css":1,"themes\/bartik\/css\/style.css":1,"themes\/bartik\/css\/colors.css":1,"themes\/bartik\/css\/print.css":1,"themes\/bartik\/css\/ie.css":1,"themes\/bartik\/css\/ie6.css":1}},"urlIsAjaxTrusted":{"\/dna_helix?destination=dna_helix":true,"\/dna_helix":true}});
 //--><!]]>
 </script>
 </head>
@@ -124,7 +124,7 @@ Human DNA is only made up of four nucleotides, represented by the letters A, T, 
 </div>
 <div class="item-list"><ul><li class="first"><a href="/user/register" title="Create a new user account.">Create new account</a></li>
 <li class="last"><a href="/user/password" title="Request new password via e-mail.">Request new password</a></li>
-</ul></div><input type="hidden" name="form_build_id" value="form-KHamwmXog1II2dOs0W4cBgYqKp51_VEwDxPnJgKwJLU" />
+</ul></div><input type="hidden" name="form_build_id" value="form-7HhNxkikPpnVCPhOcAELSsxg2relqaISNsiCe9jdihI" />
 <input type="hidden" name="form_id" value="user_login_block" />
 <div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit--2" name="op" value="Log in" class="form-submit" /></div></div></form>  </div>
 </div>
@@ -147,7 +147,7 @@ Human DNA is only made up of four nucleotides, represented by the letters A, T, 
  <input type="text" id="edit-user-strand" name="user_strand" value="mama mia" size="60" maxlength="128" class="form-text error" />
 <div class="description">Enter a strand of DNA and we'll give you a corisponding strand</div>
 </div>
-<input type="submit" id="edit-submit" name="op" value="submit" class="form-submit" /><input type="hidden" name="form_build_id" value="form-1UbLAkUV0yeOvzXxy_RWrokK5WP24sMVUPtFoSP1wYc" />
+<input type="submit" id="edit-submit" name="op" value="submit" class="form-submit" /><input type="hidden" name="form_build_id" value="form-zv6SfYi7eenpVGwr07rUKX2RrmzBxbXAkxDm4wHPx80" />
 <input type="hidden" name="form_id" value="dna_helix_form" />
 </div></form>  </div>
 </div>
