--- a/sites/default/files/simpletest/verbose/DNAHelixFormValidationTest-6.html
+++ b/sites/default/files/simpletest/verbose/DNAHelixFormValidationTest-6.html
@@ -1,5 +1,5 @@
 <hr />ID #6 (<a href="DNAHelixFormValidationTest-5.html">Previous</a> | <a href="DNAHelixFormValidationTest-7.html">Next</a>)<hr />POST request to: dna_helix<hr />Ending URL: http://localhost:8888/dna_results<hr />Fields: <code><span style="color: #000000">
-<span style="color: #0000BB">&lt;?php&nbsp;</span><span style="color: #007700">array&nbsp;(<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'user_strand'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'AAA'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'op'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'submit'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'form_build_id'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'form-mTh8SBaYGvRCsBOiKhe1looHz8ir-TMZx-8t2_jFdmE'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'form_id'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'dna_helix_form'</span><span style="color: #007700">,<br />)</span>
+<span style="color: #0000BB">&lt;?php&nbsp;</span><span style="color: #007700">array&nbsp;(<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'user_strand'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'AAA'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'op'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'submit'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'form_build_id'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'form-asSMeM42COkaGTdLRHej2sLa7Dr4wRN7BFRPxcobby4'</span><span style="color: #007700">,<br />&nbsp;&nbsp;</span><span style="color: #DD0000">'form_id'&nbsp;</span><span style="color: #007700">=&gt;&nbsp;</span><span style="color: #DD0000">'dna_helix_form'</span><span style="color: #007700">,<br />)</span>
 </span>
 </code><hr /><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
   "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
@@ -20,40 +20,40 @@
 <link rel="shortcut icon" href="http://localhost:8888/misc/favicon.ico" type="image/vnd.microsoft.icon" />
   <title>The results are in... | Drupal</title>
   <style type="text/css" media="all">
-@import url("http://localhost:8888/modules/system/system.base.css?oiaykl");
-@import url("http://localhost:8888/modules/system/system.menus.css?oiaykl");
-@import url("http://localhost:8888/modules/system/system.messages.css?oiaykl");
-@import url("http://localhost:8888/modules/system/system.theme.css?oiaykl");
+@import url("http://localhost:8888/modules/system/system.base.css?oii214");
+@import url("http://localhost:8888/modules/system/system.menus.css?oii214");
+@import url("http://localhost:8888/modules/system/system.messages.css?oii214");
+@import url("http://localhost:8888/modules/system/system.theme.css?oii214");
 </style>
 <style type="text/css" media="all">
-@import url("http://localhost:8888/modules/comment/comment.css?oiaykl");
-@import url("http://localhost:8888/modules/field/theme/field.css?oiaykl");
-@import url("http://localhost:8888/modules/node/node.css?oiaykl");
-@import url("http://localhost:8888/modules/search/search.css?oiaykl");
-@import url("http://localhost:8888/modules/user/user.css?oiaykl");
+@import url("http://localhost:8888/modules/comment/comment.css?oii214");
+@import url("http://localhost:8888/modules/field/theme/field.css?oii214");
+@import url("http://localhost:8888/modules/node/node.css?oii214");
+@import url("http://localhost:8888/modules/search/search.css?oii214");
+@import url("http://localhost:8888/modules/user/user.css?oii214");
 </style>
 <style type="text/css" media="all">
-@import url("http://localhost:8888/themes/bartik/css/layout.css?oiaykl");
-@import url("http://localhost:8888/themes/bartik/css/style.css?oiaykl");
-@import url("http://localhost:8888/themes/bartik/css/colors.css?oiaykl");
+@import url("http://localhost:8888/themes/bartik/css/layout.css?oii214");
+@import url("http://localhost:8888/themes/bartik/css/style.css?oii214");
+@import url("http://localhost:8888/themes/bartik/css/colors.css?oii214");
 </style>
 <style type="text/css" media="print">
-@import url("http://localhost:8888/themes/bartik/css/print.css?oiaykl");
+@import url("http://localhost:8888/themes/bartik/css/print.css?oii214");
 </style>
 
 <!--[if lte IE 7]>
-<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie.css?oiaykl" media="all" />
+<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie.css?oii214" media="all" />
 <![endif]-->
 
 <!--[if IE 6]>
-<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie6.css?oiaykl" media="all" />
+<link type="text/css" rel="stylesheet" href="http://localhost:8888/themes/bartik/css/ie6.css?oii214" media="all" />
 <![endif]-->
   <script type="text/javascript" src="http://localhost:8888/misc/jquery.js?v=1.4.4"></script>
 <script type="text/javascript" src="http://localhost:8888/misc/jquery.once.js?v=1.2"></script>
-<script type="text/javascript" src="http://localhost:8888/misc/drupal.js?oiaykl"></script>
+<script type="text/javascript" src="http://localhost:8888/misc/drupal.js?oii214"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"bartik","theme_token":"4AahaYqn2VPNq0O5wm-M8EaGWEpRBi_LgTUE5RzZHc8","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"themes\/bartik\/css\/layout.css":1,"themes\/bartik\/css\/style.css":1,"themes\/bartik\/css\/colors.css":1,"themes\/bartik\/css\/print.css":1,"themes\/bartik\/css\/ie.css":1,"themes\/bartik\/css\/ie6.css":1}},"urlIsAjaxTrusted":{"\/dna_results?destination=dna_results":true}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"bartik","theme_token":"SYvrIzI7velGQPJNpGt1MLkizQDAvcqvUDH62v-UmWs","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"themes\/bartik\/css\/layout.css":1,"themes\/bartik\/css\/style.css":1,"themes\/bartik\/css\/colors.css":1,"themes\/bartik\/css\/print.css":1,"themes\/bartik\/css\/ie.css":1,"themes\/bartik\/css\/ie6.css":1}},"urlIsAjaxTrusted":{"\/dna_results?destination=dna_results":true}});
 //--><!]]>
 </script>
 </head>
@@ -119,7 +119,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 </div>
 <div class="item-list"><ul><li class="first"><a href="/user/register" title="Create a new user account.">Create new account</a></li>
 <li class="last"><a href="/user/password" title="Request new password via e-mail.">Request new password</a></li>
-</ul></div><input type="hidden" name="form_build_id" value="form-g3TfeDrKfq9BF5_MfFhnRKMULRSaQk_9Ago95_s3wm0" />
+</ul></div><input type="hidden" name="form_build_id" value="form-qYFJP1UGzm_u50pkj5-oSPtUQ_abs_z43VRuL6LN1ws" />
 <input type="hidden" name="form_id" value="user_login_block" />
 <div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit" name="op" value="Log in" class="form-submit" /></div></div></form>  </div>
 </div>
